<resources>

    <string name="app_name">Movies</string>

    <string name="movie_poster_base_url">http://image.tmdb.org/t/p/w780</string>

    <string name="movie_detail_poster_base_url">http://image.tmdb.org/t/p/w500</string>

    <string name="popular">popular</string>

    <string name="tmdb_base_url">https://api.themoviedb.org/</string>

    <string name="sort_by">Sorting criteria</string>

    <string name="sort_by_key">sort_by</string>

    <string name="summary">Choose what movies will be displayed initially.</string>

    <string name="timeout_error_message">Connection timeout error occured.\nPlease check your internet connection.</string>

    <string name="details">Details</string>
    <string name="settings">Settings</string>
    <string name="synopsis">Synopsis:</string>
    <string name="rating">Rating:</string>
    <string name="release_date">Release date:</string>
    <string name="title">Title:</string>
    <string name="no_movies_to_load">No movies to load.</string>
    <string name="add_to_favs">Add to favs</string>
    <string name="no_favorites_to_load">No favorites to load.</string>
    <string name="default_sort_criteria">popular</string>
    <string name="sort_favorites">favorites</string>
    <string name="unfav_movie_label">Unfav movie</string>
    <string name="youtube_uri">vnd.youtube:</string>
    <string name="youtube_url">http://www.youtube.com/watch?v=</string>
    <string name="vote_average_format_string">%%.2f (%%d votes)</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="couldn_t_load_movie_details">Couldn\'t load movie details</string>

</resources>