<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_movie_details"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:visibility="visible"
        android:id="@+id/pb_loading_movie_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:text="@string/couldn_t_load_movie_details"
        android:visibility="invisible"
        android:id="@+id/tv_movie_details_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <ScrollView
        android:id="@+id/sv_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="3">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2">

                    <TextView
                        android:textSize="16dp"
                        android:paddingLeft="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/title" />
                    <TextView
                        android:textSize="16dp"
                        android:paddingLeft="3dp"
                        android:paddingBottom="5dp"
                        android:id="@+id/tv_original_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="16dp"
                        android:paddingLeft="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/release_date" />
                    <TextView
                        android:textSize="16dp"
                        android:paddingLeft="3dp"
                        android:paddingBottom="5dp"
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="16dp"
                        android:paddingLeft="3dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/rating" />
                    <TextView
                        android:textSize="16dp"
                        android:paddingLeft="3dp"
                        android:paddingBottom="5dp"
                        android:id="@+id/tv_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/add_to_fav_button"
                        android:text="@string/add_to_favs"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:onClick="updateFavList"/>
                </LinearLayout>
            </GridLayout>
            <TextView
                android:textSize="16dp"
                android:paddingTop="7dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/synopsis" />
            <TextView
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="3dp"
                android:textSize="16dp"
                android:id="@+id/tv_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:layout_margin="3dp"
                android:id="@+id/rv_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:layout_margin="3dp"
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
